force-app/main/default/objects/Book_Signing__c/Book_Signing__c.object-meta.xml
<CustomObject>
    <description>An event where the author of the book signs copies purchased by customers.</description>
    <label>Book Signing</label>
    <nameField>
        <label>Book Signing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books Signings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>