force-app/main/default/objects/Book_Signing__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The author who will be signing copies of their book.</description>
    <label>Author</label>
    <referenceTo>Author__c</referenceTo>
    <relationshipLabel>Books Signings</relationshipLabel>
    <relationshipName>Books_Signings</relationshipName>
    <type>Lookup</type>
</CustomField>