force-app/main/default/objects/Book_Signing__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The book that the author will be signing copies of.</description>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Books Signings</relationshipLabel>
    <relationshipName>Books_Signings</relationshipName>
    <type>Lookup</type>
</CustomField>