force-app/main/default/objects/Book_Signing__c/fields/Starts__c.field-meta.xml
<CustomField>
    <fullName>Starts__c</fullName>
    <label>Starts</label>
    <type>DateTime</type>
</CustomField>