force-app/main/default/objects/Book_Signing__c/recordTypes/Conference.recordType-meta.xml
<RecordType>
    <fullName>Conference</fullName>
    <active>true</active>
    <description>A book signing at a conference.</description>
    <label>Conference</label>
</RecordType>