force-app/main/default/objects/Book_Signing__c/recordTypes/In_Store.recordType-meta.xml
<RecordType>
    <fullName>In_Store</fullName>
    <active>true</active>
    <description>A book signing in a book store</description>
    <label>In Store</label>
</RecordType>